--- a/house/src/App.css
+++ b/house/src/App.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: var(--font-family-primary) !important;
+    /* font-family: var(--font-family-primary) !important; */
     background: var(--pastel-yellow-100)!important;
     color: #000000;
     min-height: 100vh;
