--- a/house/src/App.css
+++ b/house/src/App.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     /* font-family: var(--font-family-primary) !important; */
     background: var(--pastel-yellow-100)!important;
-    color: #000000;
+    color: var(--pastel-orange-1000)!important;
     min-height: 100vh;
   }
 
